c/src/test/resources/c/mini_bnc/valid/failPartition.ctrl
<controlFile>
  <sourceFile name="failPartition.c" id="1" />
  <run>
    <startPosition fileId="1" line="1" />
    <endPosition fileId="1" line="15" />
  </run>
</controlFile>