c/src/test/resources/c/mini_bnc/invalid/funcLocVar.ctrl
<controlFile>
  <sourceFile name="funcLocVar.c" id="1" />
  <run>
    <startPosition fileId="1" line="3" />
    <endPosition fileId="1" line="15" />
  </run>
</controlFile>